--- a/scripts/main-game/style.css
+++ b/scripts/main-game/style.css
@@ -48,6 +48,14 @@ body, html {
   display: none;
 }
 
+/* Input */
+
+input#mobileInput {
+  display: none;
+}
+
+/* Buttons */
+
 /* Texts */
 
 h1.title1 {
